--- a/suppFigure4.Rmd
+++ b/suppFigure4.Rmd
@@ -1,8 +1,14 @@
 ---
-title: "Supplemental Figure 4"
+title: "Supplementary Figure 4"
 output:
   pdf_document:
     fig_caption: yes
+    toc: yes
+    includes:
+      in_header: header.tex
+  html_document:
+    fig_caption: yes
+    self_contained: no
     toc: yes
 ---
 
@@ -11,7 +17,7 @@ fn = local({
   i = 0
   function(x, cnt=TRUE) {
     if(cnt) i <<- i + 1
-    paste('Figure 3', LETTERS[i], ': ', x, sep = '')
+    paste('__Supplementary Figure 4', LETTERS[i], '__: ', x, sep = '')
   }
 })
 ```
@@ -37,7 +43,8 @@ getMatAlignOut <- function(pcmpath, outpath="output", groupDistance=2.5, trim=0.
     leaves <- names(phylog$leaves)
     motifs <- pfms[leaves]
     if(!is.na(groupDistance)){
-        motifSig <- motifSignature(motifs, phylog, groupDistance=groupDistance, min.freq=1, trim=trim)
+        motifSig <- motifSignature(motifs, phylog, groupDistance=groupDistance,
+                                   min.freq=1, trim=trim)
         sig <- signatures(motifSig)
         gpCol <- sigColor(motifSig)
     }else{
@@ -46,7 +53,9 @@ getMatAlignOut <- function(pcmpath, outpath="output", groupDistance=2.5, trim=0.
         gpCol <- NA
     }
     
-    return(list(phylog=phylog, sig=sig, gpCol=gpCol, motifs=DNAmotifAlignment(motifs), leaves=leaves, unaligned.pfms=motifs))
+    return(list(phylog=phylog, sig=sig, gpCol=gpCol, 
+                motifs=DNAmotifAlignment(motifs), leaves=leaves, 
+                unaligned.pfms=motifs))
 }
 
 pfmList2matrixList <- function(pfms){
@@ -71,7 +80,8 @@ getMotIVOut <- function(pcmpath, cc, align, groupDistance=.005, trim=0.2){
     leaves <- names(phylog$leaves)
     motifs <- pfms[leaves]
     if(!is.na(groupDistance)){
-        motifSig <- motifSignature(motifs, phylog, groupDistance=groupDistance, min.freq=1, trim=trim)
+        motifSig <- motifSignature(motifs, phylog, groupDistance=groupDistance,
+                                   min.freq=1, trim=trim)
         sig <- signatures(motifSig)
         gpCol <- sigColor(motifSig)
     }else{
@@ -80,12 +90,13 @@ getMotIVOut <- function(pcmpath, cc, align, groupDistance=.005, trim=0.2){
         gpCol <- NA
     }
     
-    return(list(phylog=phylog, sig=sig, gpCol=gpCol, motifs=DNAmotifAlignment(motifs), leaves=leaves, unaligned.pfms=motifs))
+    return(list(phylog=phylog, sig=sig, gpCol=gpCol, motifs=DNAmotifAlignment(motifs),
+                leaves=leaves, unaligned.pfms=motifs))
 }
 
 ```
 
-# Supplemental Figure 3A. alignment of *Drosophila* motifs by matAlign
+# Supplementary Figure 3A. alignment of *Drosophila* motifs by matAlign
 ```{r Fly_B1H, fig.width=8, fig.height=11, dpi=72, fig.cap=fn("by matAlign")}
 gpDis <- 2
 Fly_B1H <- getMatAlignOut("pcmsDatasetFly", groupDistance=gpDis)
@@ -103,7 +114,7 @@ motifPiles(phylog=phylog, motifs, sig,
 detach(Fly_B1H)
 ```
 
-# Supplemental Figure 3B. alignment of *Drosophila* motifs by MotIV
+# Supplementary Figure 3B. alignment of *Drosophila* motifs by MotIV
 
 ```{r Fly_B1H.MotIV, fig.width=8, fig.height=11, dpi=72, fig.cap=fn("by MotIV")}
 gpDis <- 0.005 
@@ -123,10 +134,11 @@ motifPiles(phylog=phylog, motifs, sig,
 detach(Fly_B1H.MotIV)
 ```
 
-# Supplemental Figure 3C. fly vs mouse, by matAlign
+# Supplementary Figure 3C. fly vs mouse, by matAlign
 ```{r FlyMousePBMSAW, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Fly vs Mouse")}
 gpDis <- 2
-FlyMousePBMSAW <- getMatAlignOut("pcmsDatasetFlyMousePBM.SAW", groupDistance=gpDis, trim=0.2)
+FlyMousePBMSAW <- getMatAlignOut("pcmsDatasetFlyMousePBM.SAW", 
+                                 groupDistance=gpDis, trim=0.2)
 attach(FlyMousePBMSAW)
 
 ##set methods color
@@ -152,7 +164,7 @@ legend(-2.2, 2.4, legend=c("Dm/FFS/B1H", "Mm/Uniprobe/PBM/\nSeed-And-Wobble"),
 detach(FlyMousePBMSAW)
 ```
 
-# Supplemental Figure 3D. fly vs human, by matAlign
+# Supplementary Figure 3D. fly vs human, by matAlign
 ```{r FlyHuman, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Fly vs Human")}
 gpDis <- 2
 FlyHuman <- getMatAlignOut("pcmsDatasetFlyHuman", groupDistance=gpDis)
@@ -181,7 +193,7 @@ detach(FlyHuman)
 ```
 
 
-# Supplemental Figure 3E. mouse selex vs mouse pbm/sw vs mouse pbm dream5
+# Supplementary Figure 3E. mouse selex vs mouse pbm/sw vs mouse pbm dream5
 ```{r MmPBM_SELEX, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Mouse data from different methods")}
 gpDis <- 2
 MmPBM_SELEX <- getMatAlignOut("pcmsDatasetMmPBM_SELEX", groupDistance=gpDis)
@@ -190,13 +202,15 @@ attach(MmPBM_SELEX)
 ##set methods color
 methods <- factor(grepl("_SELEX", leaves) + grepl("_M\\d{4}", leaves))
 levels(methods) <- c("Mm", "MmDREAM", "Ms")
-levels(methods) <- colorSet[levels(methods)] ##c("PBM/Uniprobe/Seed-And-Wobble", "PBM/CIS-BP/DREAM5", "SELEX/CIS-BP")
+##c("PBM/Uniprobe/Seed-And-Wobble", "PBM/CIS-BP/DREAM5", "SELEX/CIS-BP")
+levels(methods) <- colorSet[levels(methods)]
 methods <- as.character(methods)
 
 leaveNames <- gsub("_(SELEX|PBM)", "", gsub("_(Jolma|Berger)", "", leaves))
 
 ## calculate average of top 8 position information content for each motif
-icgp <- sapply(sapply(unaligned.pfms, getIC), function(.ele) mean(sort(.ele, decreasing=TRUE)[1:min(8, length(.ele))]))
+icgp <- sapply(sapply(unaligned.pfms, getIC), function(.ele) 
+  mean(sort(.ele, decreasing=TRUE)[1:min(8, length(.ele))]))
 icgp.ranges <- range(icgp)
 icgp <- cut(icgp, 10, labels=colorRampPalette(c("green", "black", "red"))(10))
 icgp.image <- as.raster(matrix(rev(levels(icgp)), ncol=1))
@@ -238,7 +252,7 @@ text(c(2.05, 2.05), c(1.8, 2.2), labels=format(icgp.ranges, digits=3), adj=0)
 detach(MmPBM_SELEX)
 ```
 
-# Supplemental Figure 3F. mouse selex vs mouse pbm/sw vs mouse pbm dream5, by motIV
+# Supplementary Figure 3F. mouse selex vs mouse pbm/sw vs mouse pbm dream5, by motIV
 ```{r MmPBM_SELE.MotIV, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("by MotIV")}
 gpDis <- 0.005 
 MmPBM_SELEX.MotIV <- getMotIVOut("pcmsDatasetMmPBM_SELEX", 
@@ -249,13 +263,15 @@ attach(MmPBM_SELEX.MotIV)
 ##set methods color
 methods <- factor(grepl("_SELEX", leaves) + grepl("_M\\d{4}", leaves))
 levels(methods) <- c("Mm", "MmDREAM", "Ms")
-levels(methods) <- colorSet[levels(methods)] ##c("PBM/Uniprobe/Seed-And-Wobble", "PBM/CIS-BP/DREAM5", "SELEX/CIS-BP")
+##c("PBM/Uniprobe/Seed-And-Wobble", "PBM/CIS-BP/DREAM5", "SELEX/CIS-BP")
+levels(methods) <- colorSet[levels(methods)]
 methods <- as.character(methods)
 
 leaveNames <- gsub("_(SELEX|PBM)", "", gsub("_(Jolma|Berger)", "", leaves))
 
 ## calculate average of top 8 position information content for each motif
-icgp <- sapply(sapply(unaligned.pfms, getIC), function(.ele) mean(sort(.ele, decreasing=TRUE)[1:min(8, length(.ele))]))
+icgp <- sapply(sapply(unaligned.pfms, getIC), function(.ele) 
+  mean(sort(.ele, decreasing=TRUE)[1:min(8, length(.ele))]))
 icgp.ranges <- range(icgp)
 icgp <- cut(icgp, 10, labels=colorRampPalette(c("green", "black", "red"))(10))
 icgp.image <- as.raster(matrix(rev(levels(icgp)), ncol=1))
@@ -299,7 +315,7 @@ text(c(2.05, 2.05), c(1.8, 2.2), labels=format(icgp.ranges, digits=3), adj=0)
 detach(MmPBM_SELEX.MotIV)
 ```
 
-# Supplemental Figure 3G. Engrailed orthologs, by matAlign
+# Supplementary Figure 3G. Engrailed orthologs, by matAlign
 ```{r EN, fig.width=8, fig.height=4, dpi=72, fig.cap=fn("En")}
 gpDis <- 2
 EN <- getMatAlignOut("pcmsDatasetEn", groupDistance=gpDis)
@@ -327,7 +343,7 @@ detach(EN)
 ```
 
 
-# Supplemental Figure 3H. Engrailed orthologs, by motIV 
+# Supplementary Figure 3H. Engrailed orthologs, by motIV 
 ```{r EN.MotIV, fig.width=8, fig.height=4, dpi=72, fig.cap=fn("En.MotIV")}
 gpDis <- 0.005 
 EN.MotIV <- getMotIVOut("pcmsDatasetEn", 
@@ -338,7 +354,8 @@ attach(EN.MotIV)
 ##set methods color
 species <- gsub("^(Dm|Hs|Mm).*?$", "\\1", leaves)
 species[grepl("_M\\d+", leaves) & species=="Mm"] <- "MmDREAM"
-species <- colorSet[species] ##c("Dm/FFS/B1H", "Hs/CIS-BP/SELEX", "Mm/Uniprobe/PBM/\nSeed-And-Wobble")
+##c("Dm/FFS/B1H", "Hs/CIS-BP/SELEX", "Mm/Uniprobe/PBM/\nSeed-And-Wobble")
+species <- colorSet[species]
 
 leaveNames <- gsub("^(Dm|Mm|Hs)_", "", leaves)
 
@@ -356,7 +373,7 @@ legend(0.1, 0.65, legend=c("Dm/FFS/B1H", "Hs/CIS-BP/SELEX",
 detach(EN.MotIV)
 ```
 
-# Supplemental Figure 3I. fly vs ms vs hum matAlign
+# Supplementary Figure 3I. fly vs ms vs hum matAlign
 ```{r FlyMousePBMHuman, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Fly vs Mouse vs Human")}
 gpDis <- 2.5
 FlyMousePBMHuman <- getMatAlignOut("pcmsDatasetFlyMousePBMHuman",
@@ -391,7 +408,7 @@ legend(-2, 2.2,
 detach(FlyMousePBMHuman)
 ```
 
-# Supplemental Figure 3J. fly vs ms vs hum motIV
+# Supplementary Figure 3J. fly vs ms vs hum motIV
 ```{r FlyMousePBMHuman.MotIV, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Fly vs Mouse vs Human by MotIV")}
 gpDis <- 0.005
 FlyMousePBMHuman.MotIV <- getMotIVOut("pcmsDatasetFlyMousePBMHuman", 
