--- a/suppFigure7.Rmd
+++ b/suppFigure7.Rmd
@@ -1,14 +1,15 @@
 ---
-title: "Supplemental Figure 7"
+title: "Supplementary Figure 7"
 output: 
-  pdf_document:
+  html_document:
     fig_caption: yes
-    toc: yes
+    self_contained: no
+    toc: no
 ---
 ```{r setup, include=FALSE}
 library(knitr)
 opts_knit$set(progress=FALSE, verbose=FALSE)
-opts_chunk$set(comment=NA, warning=FALSE, message=FALSE, fig.width=8)
+opts_chunk$set(comment=NA, warning=FALSE, message=FALSE, fig.width=8, fig.pos="H")
 ```
 ```{r loadLib, message=FALSE, warning=FALSE, error=FALSE}
 ##load the library
@@ -52,7 +53,7 @@ getMatAlignOut <- function(pcmpath, outpath="output",
 pcmpath <- dir("pcmsUni", include.dirs=TRUE)
 matAlignOut <- lapply(file.path("pcmsUni", pcmpath), 
                       getMatAlignOut, groupDistance=4)
-description <- c("## Dimeric motifs separated from monomeric motifs from the same TF\nFor most dimeric clusters, one or more monomeric motifs cluster with a Drosophilar motif, suggesting that the absence of a fly TF in a dimeric cluster may be a methological difference rather than a biological one.", "", "", "", "", "", "There is no monomeric motif in mammals.", "The dimeric motif cluster is different from the above clusters. There are overlaps for the subunits of monomeric motif.", "For MEOX/LHX cluster, there are some exceptions like LHX6_M7193 and Lhx_M7636. The subunit of both has stong G after TAATT comparing to other monomeric motifs with stong A after TAATT.", "### Difference by platform.\nThe absence of a fly TF in a dimeric cluster may be a methological difference rather than a biological one.", "", "", "## Unique clusters", "## Cleaned unique clusters")
+description <- c("## Dimeric motifs separated from monomeric motifs from the same TF\n\nFor most dimeric clusters, one or more monomeric motifs cluster with a Drosophilar motif, suggesting that the absence of a fly TF in a dimeric cluster may be a methological difference rather than a biological one.", "", "", "", "", "", "There is no monomeric motif in mammals.", "The dimeric motif cluster is different from the above clusters. There are overlaps for the subunits of monomeric motif.", "For MEOX/LHX cluster, there are some exceptions like LHX6_M7193 and Lhx_M7636. The subunit of both has stong G after TAATT comparing to other monomeric motifs with stong A after TAATT.", "### Difference by platform.\n\nThe absence of a fly TF in a dimeric cluster may be a methological difference rather than a biological one.", "", "", "## Unique clusters", "## Cleaned unique clusters")
 colorSet <- c("Dm"="#00FC00", 
               "Mm"="brown", "Ms"="#F69156", 
               "Hs"="#D900D9")
@@ -75,26 +76,30 @@ colorSet <- c("Dm"="#00FC00",
 #     cat(knit(text=knit_expand(text=text)))
 # }
 ```
+
 ```{r expand, echo=FALSE}
 kexpand<-function(.ele, id, cap, figheight, des){
-    text <- paste("{{des}}\n```{r {{cap}},fig.cap='{{cap}}',fig.height={{figheight}},echo=",
+    text <- paste("{{des}}\n\n```{r {{cap}},fig.cap='{{cap}}',fig.height={{figheight}},echo=",
                   ifelse(id==1,"TRUE","FALSE"),
-                  "}\n
-leaveNames <- gsub('^(Dm|Mm|Ms|Hs)_', '', .ele$leaves)\n
-species <- colorSet[gsub(\"^(Dm|Mm|Ms|Hs).*$\", \"\\\\1\", .ele$leaves)]\n
+                  "}\n\n
+leaveNames <- gsub('^(Dm|Mm|Ms|Hs)_', '', .ele$leaves)\n\n
+species <- colorSet[gsub(\"^(Dm|Mm|Ms|Hs).*$\", \"\\\\1\", .ele$leaves)]\n\n
 motifPiles(phylog=.ele$phylog, .ele$motifs, 
            .ele$sig, 
            col.tree=species, col.leaves=species, 
            col.pfms2=.ele$gpCol, 
            col.pfms2.width=.01, labels.leaves=leaveNames, 
            plotIndex=c(FALSE,TRUE), IndexCex=1.5, 
-           groupDistance=4, clabel.leaves=3)\n
-```\n", sep="")
+           groupDistance=4, clabel.leaves=3)\n\n
+```\n\n", sep="")
     cat(knit(text=knit_expand(text=text)))
 }
 ```
+
 ```{r plots, results='asis'}
 sta <- mapply(function(.ele, name, ID, des){
-    kexpand(.ele, id=ID, cap=name, figheight=ceiling(.25*length(.ele$leaves)), des)
+    kexpand(.ele, id=ID, cap=paste0("Supplementary Figure 7.", name),
+            figheight=ceiling(.25*length(.ele$leaves)), des)
 }, matAlignOut, pcmpath, 1:length(pcmpath), description)
+
 ```
